# github-assignment

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  my_chnages.txt  new_feature.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
config/: config.yaml  model_params.yaml  schema.yaml
scripts/: run_data_ingestion.py  run_data_transformation.py  run_data_validation.py  run_model_evaluation.py  run_model_training.py
src/: exception.py  logger.py  predict.py  tracking.py  utils.py
src/components/: __init__.py  data_ingestion.py  data_transformation.py  data_validation.py  feature_engineering.py  model_evaluation.py  model_trainer.py
src/config/: config_entity.py  configuration.py
src/models/: model_factory.py  registry.py  selector.py  tuner.py
src/pipelines/: batch_pipeline.py  prediction_pipeline.py  train_pipeline.py
src/schemas/: loan_schema.py
tests/: conftest.py  test_configuration.py  test_data_ingestion.py  test_data_transformation.py  test_data_validation.py  test_feature_engineering.py  test_mlflow_registry.py  test_model_evaluation.py  test_model_trainer.py  test_prediction_pipeline.py  test_registry.py  test_selector.py  test_train_pipeline.py  test_tuner.py
